Update design of interfaces.
